--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,9 @@
    },
    "outputs": [],
    "source": [
-    "travel_month # \"January\""
+    "travel_month # \"January\"\n",
+    "\n",
+    "travel_"
    ]
   },
   {
@@ -119,11 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks = 5\n",
     "\n",
